Fix points column in users table being too wide for standard users

--- a/resources/users.scss
+++ b/resources/users.scss
@@ -51,11 +51,11 @@ th.header.rank {
 
 #users-table {
     .realname {
-        width: 30%;
+        min-width: 175px;
     }
     
     .username {
-        width: 70%;
+        width: 100%;
     }
 
     .header {
